--- a/app/src/main/res/layout/custom_layout.xml
+++ b/app/src/main/res/layout/custom_layout.xml
@@ -5,6 +5,7 @@
     android:layout_centerHorizontal="true"
     android:layout_gravity="center"
     android:textAlignment="center"
+    android:textColor="@color/green"
     android:textSize="@dimen/quote_text_view_text_size"
     xmlns:android="http://schemas.android.com/apk/res/android" />
 
